release 0.12

	* fixes to make the DHT more compatible
	* http seed improvements including error reporting and url encoding issues.
	* fixed bug where directories would be left behind when moving storage
	  in some cases.
	* fixed crashing bug when restarting or stopping the DHT.
	* added python binding, using boost.python
	* improved character conversion on windows when strings are not utf-8.
	* metadata extension now respects the private flag in the torrent.
	* made the DHT to only be used as a fallback to trackers by default.
	* added support for HTTP redirection support for web seeds.
	* fixed race condition when accessing a torrent that was checking its
	  fast resume data.
	* fixed a bug in the DHT which could be triggered if the network was
	  dropped or extremely rare cases.
	* if the download rate is limited, web seeds will now only use left-over
	  bandwidth after all bt peers have used up as much bandwidth as they can.
	* added the possibility to have libtorrent resolve the countries of
	  the peers in torrents.
	* improved the bandwidth limiter (it now implements a leaky bucket/node bucket).
	* improved the HTTP seed downloader to report accurate progress.
	* added more client peer-id signatures to be recognized.
	* added support for HTTP servers that skip the CR before the NL at line breaks.
	* fixed bug in the HTTP code that only accepted headers case sensitive.
	* fixed bug where one of the session constructors didn't initialize boost.filesystem. 
	* fixed bug when the initial checking of a torrent fails with an exception.
	* fixed bug in DHT code which would send incorrect announce messages.
	* fixed bug where the http header parser was case sensitive to the header
	  names.
	* Implemented an optmization which frees the piece_picker once a torrent
	  turns into a seed.
	* Added support for uT peer exchange extension, implemented by Massaroddel.
	* Modified the quota management to offer better bandwidth balancing
	  between peers.